--- a/frontend/src/assets/scss/pages/_header.scss
+++ b/frontend/src/assets/scss/pages/_header.scss
@@ -1,4 +1,5 @@
 .header {
+    
     padding: 15px 4rem 15px 4rem;
     text-align: center;
     background: #393B43;
@@ -49,6 +50,7 @@
 }
 
 .header-buttons {
+    font-family: "Arial", sans-serif;
     color: #26A58F;
     padding: 8px 8px 2px 8px;
     width: max-content;
