--- a/frontend/src/assets/scss/pages/_competitionDetails.scss
+++ b/frontend/src/assets/scss/pages/_competitionDetails.scss
@@ -53,9 +53,13 @@
             
 
                 strong {
+                    font-family: Arial, Helvetica, sans-serif;
                     color: #fff;
                     font-weight: 500;
                     padding-left: 10px;
+                }
+                .i{
+                    font-size: 5rem;
                 }
                
 
@@ -123,4 +127,7 @@
             }
         }
     }
+}
+.colored-icon{
+    font-size: 20px !important;
 }
